# sharky-fish

./: .dockerignore  .gitignore  ArchitectureDecisions.md  Design.md  Dockerfile  FrontendHandoffPlan.md  HardLinkWorkflowHandoff.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: config.rs  db.rs  downloads.rs  filesystem_audit.rs  internet_metadata.rs  library.rs  library_index.rs  main.rs  managed_items.rs  messages.rs  metadata.rs  organizer.rs  planner.rs  qbittorrent.rs  review.rs  server.rs  sidecar.rs
backend/src/actors/: brain.rs  forge.rs  identifier.rs  mod.rs  queue.rs  watcher.rs
docker/: entrypoint.sh
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: api.ts  sse.ts  status.ts  stores.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/downloads/: +page.svelte
frontend/src/routes/forge/: +page.svelte
frontend/src/routes/intake/: +page.svelte
frontend/src/routes/organize/: +page.svelte
frontend/src/routes/settings/: +page.svelte
